# MSPK

./: .gitignore  Accountant.cpp  Accountant.h  AccountantInterface.cpp  AccountantInterface.h  CMakeLists.txt  Date.cpp  Date.h  Employee.cpp  Employee.h  EmployeeFileManager.cpp  EmployeeFileManager.h  EmployeeManager.cpp  EmployeeManager.h  Ksiegowy.cpp  Ksiegowy.h  KsiegowyInterface.cpp  KsiegowyInterface.h  ManagerInterface.cpp  ManagerInterface.h  ManagerPliku.cpp  ManagerPliku.h  ManagerPracownikow.cpp  ManagerPracownikow.h  ManagerPrzelewow.cpp  ManagerPrzelewow.h  OfficeWorker.cpp  OfficeWorker.h  OfficeWorkerInterface.cpp  OfficeWorkerInterface.h  Pracownik.cpp  Pracownik.h  PracownikBiurowy.cpp  PracownikBiurowy.h  Przelew.cpp  Przelew.h  StartInterfaceEmployee.cpp  StartInterfaceEmployee.h  Transfer.cpp  Transfer.h  (+5 more)
